# coinduction

./: Cargo.toml  LICENSE  README.md  lib.rs  spec.md
.github/workflows/: rust.yml
macro/: Cargo.toml  coinduction.rs  common.rs  finalize.rs  internal.rs  lib.rs  matching.rs  next_step.rs  solver.rs  spec.md  traitdef.rs  typedef.rs
tests/: coinduction_integration_test.rs  complex.rs  complex_coinduction.rs  min_calculator.rs  minimal_coinduction.rs  trait_not_found.rs  ui_tests.rs
tests/traitdef/: Cargo.toml  lib.rs
tests/typedef/: Cargo.toml  lib.rs
tests/ui/fail/: circular_without_coinduction.rs  circular_without_coinduction.stderr  coinduction_on_struct.rs  coinduction_on_struct.stderr  coinduction_undefined_trait.rs  coinduction_undefined_trait.stderr  traitdef_missing_body.rs  traitdef_missing_body.stderr  traitdef_on_struct.rs  traitdef_on_struct.stderr  typedef_on_function.rs  typedef_on_function.stderr  typedef_undefined_trait.rs  typedef_undefined_trait.stderr  typedef_undefined_trait_multipath.rs  typedef_undefined_trait_multipath.stderr  version_mismatch_test.rs  version_mismatch_test.stderr
tests/ui/pass/: basic_coinduction.rs  basic_traitdef.rs  basic_typedef.rs  coinduction_auto_detect.rs  generic_traitdef.rs  multiple_traits_coinduction.rs  typedef_auto_detect.rs  typedef_auto_detect_undefined.rs
