[package]
name = "coinduction"
version = "0.2.0"
edition = "2021"
description = "Attribute macros for defining circular type references and recursive trait implementations in Rust"
license = "MIT"
repository = "https://github.com/yasuo-ozu/coinduction"
keywords = ["macro", "trait", "recursive", "circular", "zerocost"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
authors = ["yasuo-ozu"]

[dependencies]
coinduction-macro = { path = "./macro", version = "0.2.0" }

[dev-dependencies]
trybuild = "1.0"
traitdef = { path = "tests/traitdef" }
typedef = { path = "tests/typedef" }

[lib]
path = "lib.rs"

[workspace]
members = ["macro", ".", "tests/traitdef", "tests/typedef"]
resolver = "2"
